test/language/errors/errors_call.hm
# can't call boolean (expected function)

use "errors"

try { true() } except e { echo runtime(e) }
